<resources>
    <string name="app_name">Futbol Quiz</string>
    <string name="more_apps"><b>More applications</b></string>
    <string name="training_mode">Training mode</string>
    <string name="training">Training</string>
    <string name="carrer_mode">Carrer mode</string>
    <string name="spain_league">Spain league</string>
    <string name="england_league">England league</string>
    <string name="italy_league">Italy league</string>
    <string name="german_league">German league</string>
    <string name="french_league">French league</string>
    <string name="by_image">By image</string>
    <string name="by_name">By name</string>
    <string name="by_shield">By shield</string>
    <string name="by_capacity">By capacity</string>
    <string name="by_built">By built</string>
    <string name="share_message_general">\nThis is a great app and it\'s free!.\n\n</string>
    <string name="successful_stadiums">You have hit %d stadiums</string>
    <string name="game_over">Game over</string>
    <string name="play_again">Play again</string>
    <string name="share">Share</string>
    <string name="rate_on_play_store">Rate on play store</string>
    <string name="share_message">\nI like this game, download free!\n\n</string>
    <string name="choose_one">Choose:</string>
    <string name="blocked_level">Blocked</string>
    <string name="blocked_level_description">Your need unblock previus level</string>
    <string name="login_necessary">Login necessary</string>
    <string name="login_necessary_description">You need sign in with google</string>
    <string name="hello">Hi %s</string>
    <string name="login_info">Hello! We need you to login using your Google account to continue and become a champion. Do you accept the challenge?</string>
    <string name="following">Following</string>
    <string name="followers">followers</string>
    <string name="follower_to_user">Now you dont follow this user</string>
    <string name="follower_to_user_error">ERROR</string>
    <string name="following_to_user">Now this user is not follow for you</string>
    <string name="following_to_user_error">ERROR</string>
    <string name="level">Level</string>
    <string name="archieve">Level completed</string>
    <string name="personal_archievement">Personal archievement</string>
    <string name="global_archievement">Global archievement</string>
    <string name="last_global_archievements">Last global archievement</string>
    <string name="last_personal_archievements">Last personal archievement</string>
    <string name="stadium_by_image">Stadiums by image</string>
    <string name="shield_by_image">Shields by image</string>
    <string name="stadium_by_name">Stadiums by name</string>
    <string name="stadium_by_capacity">Stadiums by capacity</string>
    <string name="stadium_by_built">Stadiums by year</string>
    <string name="profile">Profile</string>
    <string name="result">Result</string>
    <string name="edit_profile">Edit profile</string>
    <string name="hint_description">Biography</string>
    <string name="hint_location">Location</string>
    <string name="hint_name">Name and surname</string>
    <string name="level_unlocked">Congratulations!\nYour score allow unlocked new level</string>

    <string name="no_following">You are being following to none</string>
    <string name="no_followers">You have not followers</string>
    <string name="no_items">You have not levels passed</string>

    <!-- content description image -->
    <string translatable="false" name="flag">flag</string>
    <string translatable="false" name="life">life</string>
    <string translatable="false" name="game_title">game title</string>
    <string translatable="false" name="loading_image">loading</string>
    <string translatable="false" name="dialog_image">image dialog</string>
    <string translatable="false" name="back">back</string>
    <string translatable="false" name="game_image">image to guess</string>
    <string name="unfollow">unfollow</string>
    <string name="follow">follow</string>

    <plurals name="weeks_ago">
        <item quantity="one">%s week ago</item>
        <item quantity="other">%s weeks ago</item>
    </plurals>
    <plurals name="months_ago">
        <item quantity="one">%s month ago</item>
        <item quantity="other">%s months ago</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">%s year ago</item>
        <item quantity="other">%s years ago</item>
    </plurals>

    <string name="locale">en</string>
</resources>