<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/background_dialog"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imageEditProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_edit"
            android:elevation="20dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:text="name surname"
            android:gravity="center"
            android:textAppearance="@style/Bold.TextColorLight.VeryLarge"
            app:layout_constraintTop_toBottomOf="@+id/imageUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/textDescriptionUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Regular.TextColorLight.Small"
            android:layout_marginBottom="6dp"
            tools:text="Aventurero y experto futbolero"
            app:layout_constraintTop_toBottomOf="@+id/textNameUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/textLocationUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Regular.TextColorLight.Small"
            android:layout_marginBottom="6dp"
            tools:text="Madrido"
            app:layout_constraintTop_toBottomOf="@+id/textDescriptionUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerArchivements"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:elevation="5dp"
            tools:listitem="@layout/item_profile_achievements"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textLocationUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCounters"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerArchivements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66"/>

            <TextView
                android:id="@+id/textLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4"
                android:textAppearance="@style/Bold.TextColorLight.Large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textAppearance="@style/Regular.TextColorLight.Small"
                app:layout_constraintTop_toBottomOf="@+id/textLevel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"/>

            <TextView
                android:id="@+id/textNumberFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1"
                android:textAppearance="@style/Bold.TextColorLight.Large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAppearance="@style/Regular.TextColorLight.Small"
                app:layout_constraintTop_toBottomOf="@+id/textNumberFollowing"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"/>

            <TextView
                android:id="@+id/textNumberFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="9"
                android:textAppearance="@style/Bold.TextColorLight.Large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidelineRight"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAppearance="@style/Regular.TextColorLight.Small"
                app:layout_constraintTop_toBottomOf="@+id/textNumberFollowers"
                app:layout_constraintStart_toEndOf="@id/guidelineRight"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutGlobal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutCounters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:id="@+id/separatorGlobal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColorLight"
                android:alpha="0.2"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

            <ImageView
                android:id="@id/imageGlobal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_world"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/separatorGlobal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textGlobal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global_archievement"
                android:textAppearance="@style/Regular.TextColorLight.Small"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageGlobal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPersonal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutGlobal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:id="@+id/separatorPersonal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColorLight"
                android:alpha="0.2"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@id/imagePersonal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_personal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/separatorPersonal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_archievement"
                android:textAppearance="@style/Regular.TextColorLight.Small"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagePersonal" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottomSheet"
        layout="@layout/bottom_sheet_profile" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>